2005-08-08  Nick Clifton  <nickc@redhat.com>

	* config/tc-msp430.c (MSP430_ISA_21): Define.
	(mcu_types): Add entries for msp430x21xx variants.

2005-08-08  Nick Clifton  <nickc@redhat.com>

	PR 1070
	* macro.c (getstring): Treat round parentheses in the same way as
	angle brackets.
	(get_any_string): Likewise.

2005-08-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/1118
	* as.c (parse_args): Handle -al=<FILE>.

2005-08-07  Nick Clifton  <nickc@redhat.com>

	* read.c (s_app_line): Accept a line number of 0 for compatibility
	with gcc's output for assembler-with-cpp files.

2005-08-05  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (current_it_mask, current_cc): New variables.
	(do_t_add_sub): Use correct encodings inside IT block.
	(do_t_arit3c): Ditto.
	(do_t_it): Simplify logic.  Set current_it_mask and current_cc.
	(md_assemble): Verify conditional suffixes agains IT blocks.

2005-08-05  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (encode_thumb32_immediate): Only accept shifted
	constants.
	(encode_thumb32_shifted_operand): Prohibit register shifts.
	(encode_thumb32_addr_mode): Fix typo.
	(insns): Correct thumb2 ldm and stm opcodes.

2005-08-02  Khem Raj  <kraj@mvista.com>

	* config/tc-arm.c (do_iwmmxt_wldstd): Correct the offset range for
	WLDRD/WSTRD instruction.

2005-08-02  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (md_apply_fix <ELF>): Don't warn on overflow
	if emitting a reloc.

2005-07-29  Thiemo Seufer  <ths@networkno.de>

	* config/tc-mips.c (s_mips_globl): Allow multiple symbols per .globl.

2005-07-29  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (T16_32_TAB): Add "addr". Fix encoding of push and
	pop.
	(do_t_addr): Implement 32-bit variant.
	(do_t_push_pop): Make some errors warnings.  Handle single register
	32-bit case.
	(insns): Use tCE for adr.
	(md_pcrel_from_section): Handle BFD_RELOC_ARM_T32_ADD_PC12.
	(md_apply_fix): Ditto.

2005-07-29  Paul Brook  <paul@codesourcery.com>
