@@ -1,3 +1,10 @@
+2005-08-09  Nick Clifton  <nickc@redhat.com>
+
+	PR 1070
+	* macro.c (getstring): Do not treat round parentheses exactly the
+	same as angle brackets - the parentheses need to be preserved and
+	passed on to the macro processing code.
+
 2005-08-08  Nick Clifton  <nickc@redhat.com>
 
 	* config/tc-msp430.c (MSP430_ISA_21): Define.
